add some things

--- a/HTML/views/index.ejs
+++ b/HTML/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h2 style="background-color: yellow;">Hola mi nombre es: carlos</h2>
-        <p>desde ejs</p>
+        <p>desde ejs claro </p>
     </div>
 </body>
 </html>
